older java version support (17) and changed jakarta dependencies to provided