@@ -7,6 +7,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import jakarta.json.bind.Jsonb;
 import jakarta.json.bind.JsonbBuilder;
@@ -27,7 +28,7 @@ public class TransformerFactory {
         final Jsonb jsonb = JsonbBuilder.newBuilder().build();
         final TransformerVO t = jsonb.fromJson(json, TransformerVO.class);
         return new Transformer(t.transformations == null ? Collections.emptyList()
-                : t.transformations.stream().map(this::toTransformation).toList());
+                : t.transformations.stream().map(this::toTransformation).collect(Collectors.toList()));
     }
 
     public Transformer createFromFile(final String file) throws IOException {
@@ -39,7 +40,7 @@ public class TransformerFactory {
         return new Transformation(t.merge == null ? false : t.merge, t.selfTranform == null ? false : t.selfTranform,
                 t.sourcePointer == null ? "" : t.sourcePointer,
                 t.targetPointer == null ? "" : t.targetPointer,
-                t.values == null ? Collections.emptyList() : t.values.stream().map(this::toValue).toList());
+                t.values == null ? Collections.emptyList() : t.values.stream().map(this::toValue).collect(Collectors.toList()));
     }
 
     public Value toValue(final ValueVO v) {
